src/objects/EBC_Activity__c.object
<CustomObject>
    <description>This custom object contains all history of e-mail credit transactions per campain on eBroadcast - how many e-mails credits were sent out (expensed), how many credits were adjusted, how many credits were received.</description>
    <fields>
        <fullName>Activity_Date_Time__c</fullName>
        <description>This fields logs the date and time when the activity on the account took place.</description>
        <inlineHelpText>This fields logs the date and time when the activity on the account took place.</inlineHelpText>
        <label>Activity Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>This field sets the type of activity performed on the e-mail credit.</description>
        <inlineHelpText>This field sets the type of activity performed on the e-mail credit.</inlineHelpText>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EBC_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EBC Campaign</label>
        <referenceTo>EBC_Campaign__c</referenceTo>
        <relationshipLabel>EBC Activities</relationshipLabel>
        <relationshipName>EBC_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Balance__c</fullName>
        <label>New Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Billing_Account__c</fullName>
        <description>This field links the EBC Activity to the Billing Account.</description>
        <label>Related Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>EBC Activities</relationshipLabel>
        <relationshipName>EBC_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Count__c</fullName>
        <description>This field contains the number of credits sent, credited or adjusted.</description>
        <inlineHelpText>This field contains the number of credits sent, credited or adjusted.</inlineHelpText>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>EBC Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activity_Date_Time__c</columns>
        <columns>Activity_Type__c</columns>
        <columns>EBC_Campaign__c</columns>
        <columns>Related_Billing_Account__c</columns>
        <columns>Total_Count__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>New_Balance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>EBC Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBC Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>